@@ -163,6 +163,16 @@ return [
                 'type'          => 'module',
             ],
             [
+                'slug'          => 'BicanMarianValeriu/wca-tabs',
+                'title'         => esc_html__( 'WCA: Tabs', 'wecodeart' ),
+                'description'   => esc_html__( 'Extends Gutenberg editor with an tabs block built on WP Interactivity API.', 'wecodeart' ),
+                'more'          => 'https://github.com/BicanMarianValeriu/wca-tabs/',
+                'source'        => 'github',
+                'version'       => '1.0.0',
+                'destination'   => 'tabs',
+                'type'          => 'module',
+            ],
+            [
                 'slug'          => 'BicanMarianValeriu/wca-contact-form',
                 'title'         => esc_html__( 'WCA: Contact Form 7', 'wecodeart' ),
                 'description'   => Plugins::get_default_description( 'Contact Form 7', 'external' ),
@@ -180,16 +190,6 @@ return [
                 'source'        => 'github',
                 'version'       => '1.0.8',
                 'destination'   => 'formatting',
-                'type'          => 'module',
-            ],
-            [
-                'slug'          => 'BicanMarianValeriu/wca-lorem-ipsum',
-                'title'         => esc_html__( 'WCA: Lorem Ipsum', 'wecodeart' ),
-                'description'   => esc_html__( 'Extends Gutenberg editor with lorem ipsum dummy content generator for headings, paragraphs and lists.', 'wecodeart' ),
-                'more'          => 'https://github.com/BicanMarianValeriu/wca-lorem-ipsum/',
-                'source'        => 'github',
-                'version'       => '1.0.1',
-                'destination'   => 'lorem',
                 'type'          => 'module',
             ],
             [
@@ -230,6 +230,16 @@ return [
                 'source'        => 'github',
                 'version'       => '1.0.1',
                 'destination'   => 'translate',
+                'type'          => 'module',
+            ],
+            [
+                'slug'          => 'BicanMarianValeriu/wca-lorem-ipsum',
+                'title'         => esc_html__( 'WCA: Lorem Ipsum', 'wecodeart' ),
+                'description'   => esc_html__( 'Extends Gutenberg editor with lorem ipsum dummy content generator for headings, paragraphs and lists.', 'wecodeart' ),
+                'more'          => 'https://github.com/BicanMarianValeriu/wca-lorem-ipsum/',
+                'source'        => 'github',
+                'version'       => '1.0.1',
+                'destination'   => 'lorem',
                 'type'          => 'module',
             ],
         ],
