@@ -4,7 +4,7 @@ Theme URI: https://www.wecodeart.com/
 Author: Bican Marian Valeriu @wecodeart
 Author URI: https://www.wecodeart.com/about/
 Description: A simple WordPress theme framework focused on SEO and speed (perfect 100% PageSpeed scores) while still being fully customizable via Full Site Editing. It also works perfectly with all page builder plugins.
-Version: 6.6.1
+Version: 6.6.2
 Requires PHP: 7.4
 Requires at least: 6.5
 Tested up to: 6.7
