@@ -1,5 +1,7 @@
 v6.6.2
+- Updated - Patterns registration to pass all $file arguments to Pattern model
 - Fixed - DOM clientIds for reusable blocks custom styles (from Advanced tab)
+- Added - Tabs module (1 click install from Theme Options -> Modules)
 
 v6.6.1
 - Removed - old render_block_core/template-part filter for footer shortcodes ([year][copy])
